Closed
Bug 817341
Opened 13 years ago
Closed 13 years ago
Differentiate marking and sweep-marking in GC stats
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: billm, Assigned: billm)
References
Details
Attachments
(1 file, 1 obsolete file)
|
16.94 KB,
patch
|
jonco
:
review+
|
Details | Diff | Splinter Review |
In order for the GC statistics to be useful, there has to be a strict hierarchy of phases. Right now, we have a problem where PHASE_MARK_DELAYED can happen both during marking and during sweeping. This patch fixes that.
I also realized that we weren't timing finalization of Ion code, so it fixes that too.
Attachment #687456 -
Flags: review?(jcoppeard)
| Assignee | ||
Comment 1•13 years ago
|
||
I added some extra assertions that ensure that phases are always properly nested. This found one or two problems in the previous version. Here's the updated patch.
Attachment #687456 -
Attachment is obsolete: true
Attachment #687456 -
Flags: review?(jcoppeard)
Attachment #687560 -
Flags: review?(jcoppeard)
Comment 2•13 years ago
|
||
Comment on attachment 687560 [details] [diff] [review]
patch v2
Review of attachment 687560 [details] [diff] [review]:
-----------------------------------------------------------------
Yes, looks good.
Attachment #687560 -
Flags: review?(jcoppeard) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
Comment 4•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment 5•13 years ago
|
||
FYI, I accidentally checked in a patch for bug 817431 with 817341 in the summary
You need to log in
before you can comment on or make changes to this bug.
Description
•