Bug 817341 - Differentiate marking and sweep-marking in GC stats (r=jonco)